plugins {
    id 'application'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.java-gi:gstreamer:0.13.1'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(22)
    }
}

tasks.named('run') {
    jvmArgs += "--enable-native-access=ALL-UNNAMED"
}

application {
    mainClass = "io.github.jwharm.javagi.examples.screenrec.ScreenRecorder"
}

